--- a/stylesheets/Hero.scss
+++ b/stylesheets/Hero.scss
@@ -22,23 +22,24 @@ div {
     animation: fadeInLeft 1s ease-in-out;
     
     h1 {
-        font-size: 2.5em;
+        font-size: 3.5em;
+        text-transform: uppercase;
         font-weight: 500;
           margin-bottom: 1rem;
           line-height: 1.15em;
           // text-align: center;
-          color: #363F6E;
+          color: #1a1e35;
       }
       
       span {
-          font-family: system-ui, sans-serif;
-          font-size: 2.5rem;
+          // font-family: system-ui, sans-serif;
+          // font-size: 3.5rem;
           --s: 0.1em;
           /* the thickness of the line */
           --c: #363F6E;
           /* the color */
           
-          color: #212743;
+          color: #1a1e35;
           cursor: pointer;
           padding-bottom: var(--s);
           background:
@@ -64,7 +65,7 @@ div {
           p {
               line-height: 1.25em;
               letter-spacing: 0.15cap;
-              color: #8791c0;
+              // color: #8791c0;
               font-size: 1.20rem;
               // text-align: center;
               margin-bottom: 2rem;
